# LogosQBenchmarks

./: .gitignore  Dockerfile  README.md  demo.sh  docker-compose.yml  run_benchmarks.sh
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt
cpp/src/: main.cpp  quantum_simulator.cpp  quantum_simulator.hpp
julia/: yao_benchmark.jl
python/: pennylane_benchmark.py  pennylane_qft.py  pennylane_qft_benchmark.py  qiskit_benchmark.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
scripts/: combine_results.py
visualization/: package.json  server.js
visualization/public/: dashboard.js  index.html  styles.css
